p3/confs/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dev-app

  template:
    metadata:
      labels:
        app: dev-app

    spec:
      containers:
        - name: dev-app
          image: wil42/playground:v2
          ports:
            - containerPort: 8888
