p3/confs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-app-service

spec:
  selector:
    app: dev-app

  ports:
    - port: 80
      targetPort: 8888
