p3/confs/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-app
spec:
  ingressClassName: traefik

  defaultBackend:
    service:
      name: dev-app-service
      port:
        number: 80
